# customer-churn-mlops

./: .dockerignore  Dockerfile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
mlruns/1/c12a7d31e82647a996494daf253a9f59/artifacts/: churn_model.pkl
mlruns/1/models/m-8e5cee75843c43209204a49bc955253b/artifacts/: MLmodel  conda.yaml  model.skops
mlruns/1/models/m-c0ccb4b2e62a491da417434658d6d9e6/artifacts/: MLmodel  conda.yaml  model.skops
mlruns/1/models/m-fdfd939e0fa045c19d8a78773bd8ecea/artifacts/: MLmodel  model.skops  python_env.yaml
models/: churn_pipeline.pkl
scripts/: train_and_log.py
src/: api.py  evaluate.py  ingest.py  predict.py  preprocess.py  train.py  train_pipeline.py  train_pipeline_model.py
tests/: test_features.py  test_pipeline_train.py  test_predict.py  test_registry.py  test_train.py
